llb/tests/snapshots/snapshot__snapshot_cache_mount_locked.snap
---
source: llb/tests/snapshot.rs
assertion_line: 153
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:a5bfe502a2d2cefbfa1e0ff03909e80a6aaedd9ad0394c48b5ad5c0f428e6583",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://alpine:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                Exec(
                    ExecOp {
                        meta: Some(
                            Meta {
                                args: [
                                    "echo",
                                    "hello",
                                ],
                                env: [],
                                cwd: "/",
                                user: "",
                                proxy_env: None,
                                extra_hosts: [],
                                hostname: "",
                                ulimit: [],
                                cgroup_parent: "",
                                remove_mount_stubs_recursive: false,
                                valid_exit_codes: [],
                            },
                        ),
                        mounts: [
                            Mount {
                                input: 0,
                                selector: "",
                                dest: "/",
                                output: 0,
                                readonly: false,
                                mount_type: Bind,
                                tmpfs_opt: None,
                                cache_opt: None,
                                secret_opt: None,
                                ssh_opt: None,
                                result_id: "",
                                content_cache: Default,
                            },
                            Mount {
                                input: -1,
                                selector: "",
                                dest: "/cache",
                                output: -1,
                                readonly: false,
                                mount_type: Cache,
                                tmpfs_opt: None,
                                cache_opt: Some(
                                    CacheOpt {
                                        id: "cache-id",
                                        sharing: Locked,
                                    },
                                ),
                                secret_opt: None,
                                ssh_opt: None,
                                result_id: "",
                                content_cache: Default,
                            },
                        ],
                        network: Unset,
                        security: Sandbox,
                        secretenv: [],
                        cdi_devices: [],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:7b5f31c26f27f499cb10caa145ad044a298d2ca4077eb69282c9d82165375d40",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:7b5f31c26f27f499cb10caa145ad044a298d2ca4077eb69282c9d82165375d40": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "exec.meta.base": true,
                "exec.mount.cache": true,
                "exec.mount.cache.sharing": true,
            },
            progress_group: None,
        },
        "sha256:a5bfe502a2d2cefbfa1e0ff03909e80a6aaedd9ad0394c48b5ad5c0f428e6583": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
    },
}
