llb/tests/snapshots/snapshot__snapshot_copy_all_flags.snap
---
source: llb/tests/snapshot.rs
assertion_line: 76
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:5b590cd95d4e34ffbb16391169e2859368584da390125616f833fa84f61e7fa7",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://alpine:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://busybox:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79",
                    index: 0,
                },
                Input {
                    digest: "sha256:632df335a29168d3f4122e1be3ecf25174901907ed2032e1d0da595cbf0de9ef",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: 1,
                                output: 0,
                                action: Some(
                                    Copy(
                                        FileActionCopy {
                                            src: "/src",
                                            dest: "/dst",
                                            owner: None,
                                            mode: -1,
                                            follow_symlink: true,
                                            dir_copy_contents: true,
                                            attempt_unpack_docker_compatibility: false,
                                            create_dest_path: true,
                                            allow_wildcard: true,
                                            allow_empty_wildcard: true,
                                            timestamp: -1,
                                            include_patterns: [],
                                            exclude_patterns: [
                                                "*.tmp",
                                            ],
                                            always_replace_existing_dest_paths: false,
                                            mode_str: "",
                                            required_paths: [],
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:b6c9203c1b4d379c34ede14096361f424fca5a0d7e16252d3f3a79079164e60e",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:5b590cd95d4e34ffbb16391169e2859368584da390125616f833fa84f61e7fa7": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:632df335a29168d3f4122e1be3ecf25174901907ed2032e1d0da595cbf0de9ef": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:b6c9203c1b4d379c34ede14096361f424fca5a0d7e16252d3f3a79079164e60e": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
                "file.copy.includeexcludepatterns": true,
            },
            progress_group: None,
        },
    },
}
