llb/tests/snapshots/snapshot__snapshot_file_operations_chain.snap
---
source: llb/tests/snapshot.rs
assertion_line: 187
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:a20419673ab9413a7096b399668b7f5aae6ceb6fda52746405e51f2f725298f6",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "scratch://",
                        attrs: {},
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Mkdir(
                                        FileActionMkDir {
                                            path: "/app",
                                            mode: 493,
                                            make_parents: true,
                                            owner: None,
                                            timestamp: -1,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:89a39a8d4d0431c29699fe36e510e48d9a121b69372e8820c52b5ab00019610c",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Mkfile(
                                        FileActionMkFile {
                                            path: "/app/config.toml",
                                            mode: 420,
                                            data: [
                                                91,
                                                115,
                                                101,
                                                114,
                                                118,
                                                101,
                                                114,
                                                93,
                                                10,
                                                104,
                                                111,
                                                115,
                                                116,
                                                32,
                                                61,
                                                32,
                                                34,
                                                48,
                                                46,
                                                48,
                                                46,
                                                48,
                                                46,
                                                48,
                                                34,
                                                10,
                                            ],
                                            owner: None,
                                            timestamp: -1,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:78749070086c1e0ade5b618413b5666b3093e0dac786a086473d998d8e846ca0",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Symlink(
                                        FileActionSymlink {
                                            oldpath: "/app/config.toml",
                                            newpath: "/app/current-config",
                                            owner: None,
                                            timestamp: -1,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:e272aba93c2fdcc4011322813658069ffdb5b4ce0b096a29d1073760a5096551",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: 0,
                                output: 0,
                                action: Some(
                                    Copy(
                                        FileActionCopy {
                                            src: "/app/config.toml",
                                            dest: "/app/config.toml.bak",
                                            owner: None,
                                            mode: -1,
                                            follow_symlink: false,
                                            dir_copy_contents: false,
                                            attempt_unpack_docker_compatibility: false,
                                            create_dest_path: true,
                                            allow_wildcard: false,
                                            allow_empty_wildcard: false,
                                            timestamp: -1,
                                            include_patterns: [],
                                            exclude_patterns: [],
                                            always_replace_existing_dest_paths: false,
                                            mode_str: "",
                                            required_paths: [],
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:7844f1b0c7b7bacff5c5765559996730d07174d60f93673944e3c6a37b1fed56",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Rm(
                                        FileActionRm {
                                            path: "/app/current-config",
                                            allow_not_found: false,
                                            allow_wildcard: false,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:def022a193317b72139c0d88b3bbe1f4fcbc3db1bd30f7773a31d323cf23bdc0",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:7844f1b0c7b7bacff5c5765559996730d07174d60f93673944e3c6a37b1fed56": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:78749070086c1e0ade5b618413b5666b3093e0dac786a086473d998d8e846ca0": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:89a39a8d4d0431c29699fe36e510e48d9a121b69372e8820c52b5ab00019610c": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:a20419673ab9413a7096b399668b7f5aae6ceb6fda52746405e51f2f725298f6": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:def022a193317b72139c0d88b3bbe1f4fcbc3db1bd30f7773a31d323cf23bdc0": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:e272aba93c2fdcc4011322813658069ffdb5b4ce0b096a29d1073760a5096551": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
                "file.symlink.create": true,
            },
            progress_group: None,
        },
        "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {},
            progress_group: None,
        },
    },
}
