llb/tests/snapshots/snapshot__snapshot_image_run.snap
---
source: llb/tests/snapshot.rs
assertion_line: 47
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:749379c475fcefa9d2989f1d9f5873d6afccb19638763eaae0780c83e633e495",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://alpine:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                Exec(
                    ExecOp {
                        meta: Some(
                            Meta {
                                args: [
                                    "echo",
                                    "hello",
                                ],
                                env: [],
                                cwd: "/",
                                user: "",
                                proxy_env: None,
                                extra_hosts: [],
                                hostname: "",
                                ulimit: [],
                                cgroup_parent: "",
                                remove_mount_stubs_recursive: false,
                                valid_exit_codes: [],
                            },
                        ),
                        mounts: [
                            Mount {
                                input: 0,
                                selector: "",
                                dest: "/",
                                output: 0,
                                readonly: false,
                                mount_type: Bind,
                                tmpfs_opt: None,
                                cache_opt: None,
                                secret_opt: None,
                                ssh_opt: None,
                                result_id: "",
                                content_cache: Default,
                            },
                        ],
                        network: Unset,
                        security: Sandbox,
                        secretenv: [],
                        cdi_devices: [],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:d4fdb66d00a3f0b0565d738657c3550292751eb009a639bda9724cf1eb2acf11",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:749379c475fcefa9d2989f1d9f5873d6afccb19638763eaae0780c83e633e495": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:d4fdb66d00a3f0b0565d738657c3550292751eb009a639bda9724cf1eb2acf11": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "exec.meta.base": true,
            },
            progress_group: None,
        },
    },
}
