llb/tests/snapshots/snapshot__snapshot_local_all_attrs.snap
---
source: llb/tests/snapshot.rs
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:a557fa3a4a4987fd4f6c91b0a5f8464c15973cf90f457e29dd477775286a9087",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "local://context",
                        attrs: {
                            "local.followpaths": "[\"src\"]",
                            "local.sessionid": "sess",
                            "local.sharedkeyhint": "hint",
                            "local.uniquename": "unique",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:e7bdf2a34adcf1f726f14e9779c88cbb48a8a1b953a9d1eba1f5dcd02f2a372c",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:a557fa3a4a4987fd4f6c91b0a5f8464c15973cf90f457e29dd477775286a9087": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:e7bdf2a34adcf1f726f14e9779c88cbb48a8a1b953a9d1eba1f5dcd02f2a372c": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.local": true,
                "source.local.followpaths": true,
                "source.local.sessionid": true,
                "source.local.sharedkeyhint": true,
                "source.local.unique": true,
            },
            progress_group: None,
        },
    },
}
