llb/tests/snapshots/snapshot__snapshot_merge.snap
---
source: llb/tests/snapshot.rs
assertion_line: 58
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:c1fd99b71205d69e7d178751aef7d5ff6831dcf59db87c5174025ec4bdd85295",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://alpine:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://busybox:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79",
                    index: 0,
                },
                Input {
                    digest: "sha256:632df335a29168d3f4122e1be3ecf25174901907ed2032e1d0da595cbf0de9ef",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                Merge(
                    MergeOp {
                        inputs: [
                            MergeInput {
                                input: 0,
                            },
                            MergeInput {
                                input: 1,
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:135dce6d5bd2714a2b5a80870002a6333827b4f3c6174b37969610c45a4fea76",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:135dce6d5bd2714a2b5a80870002a6333827b4f3c6174b37969610c45a4fea76": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "mergeop": true,
            },
            progress_group: None,
        },
        "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:632df335a29168d3f4122e1be3ecf25174901907ed2032e1d0da595cbf0de9ef": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:c1fd99b71205d69e7d178751aef7d5ff6831dcf59db87c5174025ec4bdd85295": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
    },
}
